# OPENRL1

./: Dockerfile  inference.py  pyproject.toml  requirements.txt
legal_env/: rewards.py
legal_env/server/: app.py  legal_environment.py
server/: app.py
